css/styles.css
@media screen and (max-width: 640px) {
    .navbar {
        grid-template-columns: 1fr;
    }
}

@media screen and (min-width: 720px) and (max-width: 1024px) {
    .section-body {
        margin-left: auto;
        margin-right: auto;
        max-width: 720px;
    }
}

@media screen and (min-width: 1024px) and (max-width: 1600px) {
    .section-body {
        margin-left: auto;
        margin-right: auto;
        max-width: 1024px;
    }
}

@media screen and (min-width: 1600px) {
    .section-body {
        margin-left: auto;
        margin-right: auto;
        max-width: 1280px;
    }
}

body {
    background-color: #0f0f0f;
    color: #ffffff;
    font-family: 'Montserrat', sans-serif, serif;
    font-size: 1em;
    scroll-behavior: smooth;
}

form {
    margin: auto;
}

img {
    max-height: 100%;
    max-width: 100%;
    margin: auto;
}

input, textarea {
    padding: 1em;
    width: 100%;
}

input[type=submit] {
    background-color: #0f0f0f;
    border: solid;
    border-radius: 8px;
    border-width: 1px;
    color: #f0f0f0;
    cursor: pointer;
    margin: 3em 0em;
    text-transform: uppercase;
    transition-duration: 0.3s;
}

input[type=submit]:hover {
    background-color: #ffffff;
    color: #000000;
}

label {
    display: block;
    margin: 1em 0em;
}

.about-text {
    font-size: 1em;
    margin: 0em;
    padding-top: 1em;
    padding-bottom: 1em;
}

.email-body {
    padding-bottom: 2vw;
}

.home-img {
    position: relative;
    top:3.5em;
    padding-bottom: 2em;
}

.foot-links {
    background-color: #505050;
    display: flex;
    justify-content: center;
    padding-top: 2vw;
    padding-bottom: 2vw;
}

.link-button {
    margin-left: 1em;
    margin-right: 1em;
    font-size: 1.75rem;
}

.page-subhead {
    font-size: 3em;
    margin: 0em;
    text-align: center;
    text-transform: uppercase;
}

.project-body {
    display: flex;
    padding-top: 2em;
    padding-bottom: 2em;
}

.project-desc {
    flex: 1;
}

.project-head {
    font-size: 2em;
    margin: 0;
}

.project-img {
    position: relative;
}

.project-subtext {
    font-size: 1em;
    font-style: italic;
    margin: 0em;
    padding-top: 1em;
    padding-bottom: 1em;
}

.project-bodytext {
    font-size: 1em;
    margin: 0em;
    padding-top: 1em;
    padding-bottom: 1em;
}


.section-body {
    align-self: center;
    padding-top: 2em;
    padding-left: 3rem;
    padding-right: 3rem;
    padding-bottom: 2em;
}

.section-text {
    font-size: 1em;
    margin: 0em;
    padding-top: 1em;
    padding-left: 5em;
    padding-right: 5em;
    padding-bottom: 1em;
}

.navbar {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1em;
    background-color: #505050;
    padding-top: 2vw;
    padding-bottom: 2vw;
}

/*
    Text color for navbar unhovered: #f0f0f0
    Text color for navbar hovered: #ffffff
*/

.nav-home {
    font-size: 1em;
    letter-spacing: 2px;
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 1em;
    margin-right: 1em;
    text-transform: uppercase;
}

.nav-button {
    color: #f0f0f0;
    text-decoration: none;
    transition-duration: 0.3s;
    margin-left: 1em;
    margin-right: 1em;
}

.nav-button:hover {
    color: #ffffff;
}

.nav-selection {
    display: flex;
    font-family: 'Montserrat', sans-serif, serif;
    font-size: 1em;
    letter-spacing: 2px;
    list-style: none;
    margin-top: 0;
    margin-bottom: 0;
    padding:0 0;
    justify-content: end;
    text-transform: uppercase;
}

/*
.nav-selection li {
    margin-left: 1em;
    margin-right: 1em;
}
*/

.resume-link {
    align-items: center;
    background-color: #0f0f0f;
    border: solid;
    border-radius: 8px;
    border-width: 1px;
    color: #f0f0f0;
    cursor: pointer;
    display: flex;
    font-size: 1em;
    justify-content: center;
    margin: 1em 2em;
    padding: 1em 2em;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    transition-duration: 0.3s;
}

.resume-link:hover {
    background-color: #ffffff;
    color: #000000;
}

